<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
                android:title="@string/mackay_settings_title"
                android:key="category_mackay">
                <PreferenceScreen
                android:key="processor_settings"
                android:title="@string/mackay_settings_title"
                android:summary="@string/mackay_settings_summary">
                </PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- Color tuning -->
	    <com.cyanogenmod.settings.device.ColorTuningPreference 
	        android:key="color_tuning"
	        android:title="@string/color_tuning_title_head"
	        android:summary="@string/color_tuning_summary_head" />
	    <!-- mDNIe Options -->
	    <ListPreference
	        android:key="mdnie"
	        android:title="@string/mdnie_title_head"
	        android:summary="@string/mdnie_summary_head"
	        android:entries="@array/mdnie_entries"
	        android:entryValues="@array/mdnie_entries_values"
	        android:defaultValue="6" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_touchkey_title">
	    <!-- Touch key backlight timeout -->
	    <ListPreference 
	        android:key="backlight_timeout"
	        android:title="@string/backlight_timeout_title_head"
	        android:summary="@string/backlight_timeout_summary_head"
	        android:entries="@array/backlight_timeout_entries"
  			android:entryValues="@array/backlight_timeout_entries_values"
  			android:defaultValue="1600" />
	</PreferenceCategory>

	<PreferenceCategory
            android:title="@string/category_led_title"
                android:key="category_led">
	    <!-- LED notification setting -->
		<CheckBoxPreference
			android:key="bln"
			android:title="@string/bln_head"
			android:summaryOn="@string/bln_on"
			android:summaryOff="@string/bln_off"
                android:persistent="true" />
	</PreferenceCategory>


	<PreferenceCategory
        android:title="@string/category_radio_title"
        android:key="category_radio">
	    <!-- UMTS/HSDPA/HSUPA settings -->
	    <ListPreference
	        android:key="hspa"
	        android:title="@string/hspa_title_head"
	        android:summary="@string/hspa_summary_head"
	        android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:defaultValue="23" />
	</PreferenceCategory>

	<PreferenceCategory
                android:title="@string/category_tvout_title"
                android:key="category_tvout">
		<CheckBoxPreference
			android:key="tvout_enable"
			android:title="@string/tvout_enable_head"
			android:summaryOn="@string/tvout_enable_summary_on"
			android:summaryOff="@string/tvout_enable_summary_nocable"
			android:persistent="false"
			android:enabled="false" />
		<ListPreference
			android:key="tvout_system"
			android:title="@string/tvout_system_head"
			android:summary="@string/tvout_system_summary"
			android:entries="@array/tvout_system_entries"
			android:entryValues="@array/tvout_system_entries_values"
			android:defaultValue="2" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_volume_boost_title"
            android:key="category_volume_boost">
                <!-- Volume Boost -->
                <com.cyanogenmod.settings.device.VolumeBoostPreference
                android:key="volume_boost"
                android:title="@string/volume_boost_title_head"
                android:summary="@string/volume_boost_summary_head" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_dock_audio_title"
            android:key="category_dock_audio">
            <!-- Dock Audio -->
            <CheckBoxPreference
                android:key="cardock_audio"
                android:title="@string/cardock_audio_title_head"
                android:summaryOn="@string/cardock_audio_summary_on"
                android:summaryOff="@string/cardock_audio_summary_off"
                android:persistent="true" />
            <CheckBoxPreference
                android:key="deskdock_audio"
                android:title="@string/deskdock_audio_title_head"
                android:summaryOn="@string/deskdock_audio_summary_on"
                android:summaryOff="@string/deskdock_audio_summary_off"
                android:persistent="true" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_vibration_title">
            <!-- Vibration -->
            <com.cyanogenmod.settings.device.VibrationPreference
                android:key="vibration"
                android:title="@string/vibration_title_head"
                android:summary="@string/vibration_summary_head" />
         </PreferenceCategory>

	<PreferenceCategory
                android:title="@string/category_wifi_title"
                android:key="category_wifi">
		<CheckBoxPreference
			android:key="wifi_speed"
			android:title="@string/wifi_speed_head"
			android:summaryOn="@string/wifi_speed_on"
			android:summaryOff="@string/wifi_speed_off"
                android:persistent="true" />
	</PreferenceCategory>

	<PreferenceCategory
                android:title="@string/category_blx_preference_title"
                android:key="category_blx_preference">
	        <com.cyanogenmod.settings.device.BLXPreference 
	                android:key="blx"
	                android:title="@string/blx_title_head"
	                android:summary="@string/blx_summary_head" />
	</PreferenceCategory>

	<PreferenceCategory
            android:title="@string/category_navigation_title"
                android:key="category_navigation">
	        <!-- Navbar setting -->
		<CheckBoxPreference
			android:key="navbar"
			android:title="@string/navbar_head"
			android:summaryOn="@string/navbar_on"
			android:summaryOff="@string/navbar_off"
                android:persistent="true" />
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/category_ram_title"
		android:key="category_ram">
		<!-- RAM setting -->
		<CheckBoxPreference
			android:key="lowram"
			android:title="@string/lowram_head"
			android:summaryOn="@string/lowram_on"
			android:summaryOff="@string/lowram_off"
			android:persistent="true" />
	</PreferenceCategory>

	<PreferenceCategory
            android:title="@string/category_touchwake_title"
                android:key="category_touchwake">
                <!-- Touchwake active -->
		<CheckBoxPreference
			android:key="touchwakeactive"
			android:title="@string/touchwakeactive_head"
			android:summaryOn="@string/touchwakeactive_on"
			android:summaryOff="@string/touchwakeactive_off"
                android:persistent="true" />
	        <com.cyanogenmod.settings.device.TouchWakePreference
	                android:key="touchwakedelay"
	                android:title="@string/touchwakedelay_title_head"
	                android:summary="@string/touchwakedelay_summary_head" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_apply_settings"
            android:key="category_apply">
            <CheckBoxPreference
                android:key="apply"
                android:title="@string/apply_title"
                android:summaryOn="@string/apply_summary_on"
                android:summaryOff="@string/apply_summary_off"
                android:persistent="true" />
        </PreferenceCategory>

</PreferenceScreen>
